# rs_state_machine

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: dsl.rs  lib.rs  machine.rs  main.rs
src/benches/: dsl_benches.rs  machine_benches.rs  mod.rs
src/core/: errors.rs  graph.rs  machine.rs  matrix.rs  mod.rs  transition.rs  transitionable.rs
src/model/: errors.rs  machine.rs  mod.rs  state.rs  transition.rs  transitionable.rs
src/tests/: dsl_test.rs  e2e_test.rs  machine_test.rs  mod.rs  transition_test.rs  transitionable_test.rs
